fix: - remove scrollbar-gutter property cy-88

--- a/apps/frontend/src/assets/css/reset.css
+++ b/apps/frontend/src/assets/css/reset.css
@@ -18,7 +18,6 @@
 html {
 	text-size-adjust: none;
 	scroll-behavior: smooth;
-	scrollbar-gutter: stable;
 }
 
 html,
